--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^7.0.0
   go_router: ^17.0.1
+  flutter_riverpod: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,7 @@ flutter:
   fonts:
     - family: UthmanicHafs
       fonts:
-        - asset: fonts/uthmani.ttf
+        - asset: assets/fonts/uthmani.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
