--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^7.0.0
   go_router: ^17.0.1
   flutter_riverpod: ^3.1.0
+  qcf_quran: ^0.0.3
 
 dev_dependencies:
   flutter_test:
