--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^17.0.1
   flutter_riverpod: ^3.1.0
   qcf_quran: ^0.0.3
+  just_audio: ^0.10.5
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
