--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   qcf_quran: ^0.0.3
   just_audio: ^0.10.5
   flutter_screenutil: ^5.9.3
+  audio_session: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/text/quran.json
-  #   - images/a_dot_ham.jpeg
+    - assets/quranAudio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
