recovery: quck commit before changing a major package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   just_audio: ^0.10.5
   flutter_screenutil: ^5.9.3
   audio_session: ^0.2.2
+  quran_library: ^2.3.5
 
 dev_dependencies:
   flutter_test:
