--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   audio_session: ^0.2.2
   quran_library: ^2.3.5
+  audio_service: ^0.18.18
 
 dev_dependencies:
   flutter_test:
