feat: migrated back to qcf_quran with new custom highlighting

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   audio_session: ^0.2.2
   quran_library: ^2.3.5
   audio_service: ^0.18.18
+  qcf_quran: ^0.0.3
 
 dev_dependencies:
   flutter_test:
