--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   quran_library: ^2.3.5
   audio_service: ^0.18.18
   qcf_quran: ^0.0.3
+  dio: ^5.9.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
