--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   qcf_quran: ^0.0.3
   dio: ^5.9.0
   path_provider: ^2.1.5
+  wheel_picker: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/text/quran.json
-    - assets/quranAudio/
+    # - assets/quranAudio/
+    - assets/pages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
