feat: Implement surah search functionality and add page-based navigation with dynamic Quran page display."

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ flutter:
   assets:
     - assets/text/quran.json
     # - assets/quranAudio/
-    - assets/pages/
+    # - assets/pages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
