--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   flutter_screenutil: ^5.9.3
   audio_session: ^0.2.2
   audio_service: ^0.18.18
-  qcf_quran: ^0.0.3
   dio: ^5.9.0
   path_provider: ^2.1.5
   wheel_picker: ^0.2.2
@@ -70,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/text/quran.json
+    - assets/text/ayah_coords.json
     # - assets/quranAudio/
     - assets/pages/
 
