Load dotenv and refine playback, highlights, settings
Add flutter_dotenv and call dotenv.load() in main
Update AyahHighlightPainter to use separate scaleX/scaleY and tighten
padding
Compute both width/height scales in QuranPageView
Make PlayButton show a replay icon when audio is completed
FooterPlayer now opens BottomSettings to initialize playback range when
no audio is loaded and accepts currentSurah; also updates session config
BottomSettings: replace WheelPickerController with
FixedExtentScrollController,
add initial start/end params, and sync config on init
SurahPage syncs session config to the opened surah on first load
Add .env to assets and update pubspec.lock for flutter_dotenv

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.9.0
   path_provider: ^2.1.5
   wheel_picker: ^0.2.2
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,7 @@ flutter:
     - assets/text/ayah_coords.json
     # - assets/quranAudio/
     - assets/pages/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
